--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: jaguar_static_file
-version: 0.4.0
+version: 0.5.0
 
 authors:
 - Ravi Teja Gudapati <tejainece@gmail.com>
@@ -9,5 +9,11 @@ homepage: http://jaguar-dart.github.io
 description: Static file handler for jaguar
 
 dependencies:
-  jaguar: ">=0.4.0 <0.5.0"
+  jaguar: ">=0.5.1 <0.6.0"
+
+dev_dependencies:
+  jaguar_reflect: '>=0.5.0 <0.6.0'
+  http: '>=0.11.3+13 <0.12.0'
+  path: '>=1.4.1 <1.5.0'
+  test:
 
