--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,14 @@
 name: jaguar_static_file
 version: 0.5.2
+description: Static file handler for jaguar
 
 authors:
 - Ravi Teja Gudapati <tejainece@gmail.com>
 - Kevin Segaud <segaud.kevin@gmail.com>
 homepage: http://jaguar-dart.github.io
 
-description: Static file handler for jaguar
+environment:
+  sdk: ">=1.8.0 <2.0.0"
 
 dependencies:
   jaguar: ^0.6.5
